@@ -416,6 +416,8 @@ Newsgroup list successfully updated.
 .RS
 .IP "group"
 Updating group info failed for some (but not all) attempted servers.
+.IP "xover"
+Weird things happened while updating group info.
 .IP "grouplist"
 Updating newsgroup list failed for some (but not all) attempted servers.
 .IP "retrieve"
